# EchoIQ-Labs

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test.json
apps/api/: pyproject.toml
apps/api/app/: main.py
apps/api/app/api/routes/: health.py  leads.py  webhooks.py
apps/api/app/core/: config.py  database.py  redis_client.py
apps/api/app/schemas/: lead.py
apps/api/app/services/: call_dispatch_service.py  compliance_service.py  duplicate_service.py  lead_service.py  normalization_service.py  scoring_service.py
apps/api/app/tests/: test_lead_creation.py  test_services.py  test_webhooks.py
apps/web/: package.json  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
apps/web/lib/: api.ts
apps/worker/: pyproject.toml
apps/worker/app/: call_worker.py  main.py
docs/: SPRINT_1_RUNBOOK.md
