[project]
name = "echoiq-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic-settings>=2.3",
  "email-validator>=2.1",
  "psycopg[binary]>=3.2",
  "redis>=5.0",
  "pytest>=8.2",
  "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
